--- a/components/main.scss
+++ b/components/main.scss
@@ -18,18 +18,29 @@
     --interactive-normal: #c8c8c8!important;
     --input-background: #2c313a!important;
 	--status-positive-background: #56B6C2 !important;
+
 	--brand-experiment: #61AFEF !important; 	//eg button when making group dm
 	--brand-experiment-560: #3477ad !important; //hover color for the button from above
+	--brand-experiment-600: #0d497a !important; //click color for the button from above
+	--brand-experiment-360: #E5C07B !important; //for purple text
+
 	--profile-body-background-color: #282c34 !important; //user profile background color
 
 	--accent-sea-blue: #56B6C2!important;
 	--accent-blue: #61AFEF !important;
 	--background-brighter: #363b46!important;
+}
 
-	.theme-dark{
-		--background-primary: #282c34!important;
-		--background-secondary: #21252b!important;
-		--background-secondary-alt: #21252b!important;
-		--background-tertiary: #282c34!important;
-	}
+.theme-dark{
+	--background-primary: #282c34!important;
+	--background-secondary: #21252b!important;
+	--background-secondary-alt: #21252b!important;
+	--background-tertiary: #282c34!important;
+	--text-brand: #E5C07B !important;
+
+	--status-danger: #E06C75 !important;
+	--button-danger-background: #E06C75 !important;
+}
+.root-g14mjS{
+	--modal-background: #282c34!important;
 }
