--- a/components/elements.scss
+++ b/components/elements.scss
@@ -1,7 +1,7 @@
 
 // discorvery and add server icon color
 .circleIcon-3489FI{
-	color: var(--accent-sea-blue)!important;
+	color: var(--accent-sea-green)!important;
 }
 
 // discovery and add server icon background color
@@ -11,7 +11,7 @@
 
 // discovery and add server icon background color when hovered / selected
 .circleIconButton-1VxDrg.selected-2r1Hvo{
-	background-color: var(--accent-sea-blue)!important;
+	background-color: var(--accent-sea-green)!important;
 }
 // discovery and add server icon color color when hovered / selected
 .circleIconButton-1VxDrg.selected-2r1Hvo .circleIcon-3489FI{
@@ -34,7 +34,7 @@
 }
 
 .bd-switch input:checked+.bd-switch-body {
-    --switch-color:  var(--accent-sea-blue) !important; 
+    --switch-color:  var(--accent-sea-green) !important; 
 }
 
 // forum backround color
