added button colors

--- a/css/main.css
+++ b/css/main.css
@@ -71,6 +71,10 @@
   --switch-color: var(--accent-sea-green) !important;
 }
 
+.container-2nx-BQ.checked-25WXMf {
+  background-color: var(--accent-sea-green) !important;
+}
+
 .container-3wLKDe {
   background-color: var(--background-primary) !important;
 }
