--- a/one-dark.theme.css
+++ b/one-dark.theme.css
@@ -1,6 +1,6 @@
 /**
  * @name One Dark
- * @author Frostplexx
+ * @author Frostplexx#3907
  * @version 1.0.0
  * @description The One Dark Atom theme for Discord
  * @source https://github.com/Frostplexx/discord-one-dark
