--- a/components/elements.scss
+++ b/components/elements.scss
@@ -33,8 +33,12 @@
 	background: var(--background-primary)!important;
 }
 
+// bd switches
 .bd-switch input:checked+.bd-switch-body {
     --switch-color:  var(--accent-sea-green) !important; 
+}
+.container-2nx-BQ.checked-25WXMf {
+	background-color:  var(--accent-sea-green) !important; 
 }
 
 // forum backround color
