--- a/components/fixes.scss
+++ b/components/fixes.scss
@@ -25,3 +25,13 @@
 .searchBar-jGtisZ{
 	background-color: var(--secondary) !important;
 }
+
+// fix userarea color
+.panels-3wFtMD{
+	background-color: var(--tertiary) !important;
+}
+
+// fix textbox margin
+.form-3gdLxP{
+	margin-bottom: -10px !important;
+}
