fix discord button

--- a/components/main.scss
+++ b/components/main.scss
@@ -37,6 +37,8 @@
 	--background-mentioned: #e5c07b2e !important; //background when you are mentioned
 	--button-positive-background: var(--accent-sea-green) !important; //eg button when dming someone on profile
 
+
+	--interactive-muted: #4B4C4F !important; //for the text in the search bar
 }
 
 .theme-dark{
