--- a/components/fixes.scss
+++ b/components/fixes.scss
@@ -35,3 +35,8 @@
 .form-3gdLxP{
 	margin-bottom: -10px !important;
 }
+
+//fix discord icon color on hover and click
+.wrapper-3kah-n.selected-1Drb7Z .childWrapper-1j_1ub{
+	background-color: var(--accent-blue) !important;
+}
