--- a/components/fixes.scss
+++ b/components/fixes.scss
@@ -40,3 +40,8 @@
 .wrapper-3kah-n.selected-1Drb7Z .childWrapper-1j_1ub{
 	background-color: var(--accent-blue) !important;
 }
+
+//remove background of chatbox
+.channelTextArea-1FufC0.channelTextArea-1VQBuV{
+	background: transparent !important;
+}
