added compression to main.css

--- a/css/main.css
+++ b/css/main.css
@@ -1,166 +1,1 @@
-:root {
-  --primary: #282c34;
-  --background-accent: var(--primary)!important;
-  --profile-body-background-color: var(--primary) !important;
-  --background-primary: var(--primary)!important;
-  --background-tertiary: var(--primary)!important;
-  --secondary: #23272E;
-  --channeltextarea-background: var(--secondary)!important;
-  --background-secondary: var(--secondary)!important;
-  --background-secondary-alt: var(--secondary)!important;
-  --background-floating: var(--secondary)!important;
-  --tertiary: #1E2228;
-  --input-background: var(--tertiary)!important;
-  --interactive-muted: var(--tertiary)313a!important;
-  --accent-sea-green: #56B6C2!important;
-  --accent-blue: #61AFEF !important;
-  --background-brighter: #363b46!important;
-  --accent-yellowish: #E5C07B !important;
-  --accent-red: #E06C75 !important;
-  --status-positive-background: var(--accent-sea-green) !important;
-  --brand-experiment: var(--accent-blue) !important;
-  --brand-experiment-560: #3477ad !important;
-  --brand-experiment-600: #0d497a !important;
-  --brand-experiment-360: var(--accent-yellowish)!important;
-  --background-mentioned: #e5c07b2e !important;
-  --button-positive-background: var(--accent-sea-green) !important;
-  --interactive-muted: #4B4C4F !important;
-}
-
-.theme-dark {
-  --background-primary: var(--primary)!important;
-  --background-secondary: var(--secondary)!important;
-  --background-secondary-alt: var(--secondary)!important;
-  --background-tertiary: var(--tertiary)!important;
-  --text-brand: var(--accent-yellowish) !important;
-  --status-danger: var(--accent-red)!important;
-  --button-danger-background: var(--accent-red) !important;
-  --button-positive-background: var(--accent-sea-green) !important;
-  --button-positive-background-hover: #4fa5b0 !important;
-  --button-positive-background-active: #3e8892 !important;
-}
-
-.root-g14mjS {
-  --modal-background: var(--primary)!important;
-}
-
-.circleIcon-3489FI {
-  color: var(--accent-sea-green) !important;
-}
-
-.circleIconButton-1VxDrg {
-  background-color: var(--background-brighter);
-}
-
-.circleIconButton-1VxDrg.selected-2r1Hvo {
-  background-color: var(--accent-sea-green) !important;
-}
-
-.circleIconButton-1VxDrg.selected-2r1Hvo .circleIcon-3489FI {
-  color: var(--interactive-active) !important;
-}
-
-.childWrapper-1j_1ub {
-  background-color: var(--background-brighter) !important;
-}
-
-.blobContainer-ikKyFs.selected-3c78Ai .childWrapper-1j_1ub {
-  background-color: var(--accent-blue) !important;
-}
-
-.userProfileInnerThemedNonPremium-1gT-zY {
-  background: var(--background-primary) !important;
-}
-
-.bd-switch input:checked + .bd-switch-body {
-  --switch-color: var(--accent-sea-green) !important;
-}
-
-.container-2nx-BQ.checked-25WXMf {
-  background-color: var(--accent-sea-green) !important;
-}
-
-.bd-button.bd-button-title {
-  background-color: var(--accent-blue) !important;
-}
-
-.bd-button.bd-view-button.selected {
-  background-color: var(--accent-blue) !important;
-}
-
-.bd-button.bd-addon-button {
-  background-color: var(--accent-blue) !important;
-}
-
-.bd-button.bd-addon-button.bd-button-danger {
-  background-color: var(--accent-red) !important;
-}
-
-.roundButton-2_R5PN.activeButton-LRWFC_ {
-  background-color: var(--accent-blue) !important;
-}
-
-.container-3wLKDe {
-  background-color: var(--background-primary) !important;
-}
-
-.mainCard-3KBsBI {
-  background-color: var(--background-secondary) !important;
-}
-
-.scrollableContainer-15eg7h {
-  border-radius: 25px !important;
-}
-
-.bar-2eAyLE.unreadBar-elBRZx.unread-2wipsx {
-  backdrop-filter: blur(5px) !important;
-}
-
-.form-3gdLxP {
-  background: none !important;
-  background-color: none !important;
-}
-
-.channelTextArea-1FufC0 {
-  background: none !important;
-  background-color: none !important;
-}
-
-.container-ZMc96U.themed-Hp1KC_ {
-  background-color: var(--primary) !important;
-}
-
-.addFriend-emTWY1 {
-  background-color: var(--accent-sea-green) !important;
-}
-
-.addFriend-emTWY1.selected-g-kMVV {
-  color: var(--accent-sea-green) !important;
-  background-color: var(--primary) !important;
-}
-
-.popout-3gby1q {
-  background-color: var(--primary) !important;
-}
-
-.searchBar-jGtisZ {
-  background-color: var(--secondary) !important;
-}
-
-.panels-3wFtMD {
-  background-color: var(--tertiary) !important;
-}
-
-.form-3gdLxP {
-  margin-bottom: -10px !important;
-}
-
-.wrapper-3kah-n.selected-1Drb7Z .childWrapper-1j_1ub {
-  background-color: var(--accent-blue) !important;
-}
-
-.channelTextArea-1FufC0.channelTextArea-1VQBuV {
-  background: transparent !important;
-}
-
-/*# sourceMappingURL=main.css.map */
+:root{--primary: #282c34;--background-accent: var(--primary)!important;--profile-body-background-color: var(--primary) !important;--background-primary: var(--primary)!important;--background-tertiary: var(--primary)!important;--secondary: #23272E;--channeltextarea-background: var(--secondary)!important;--background-secondary: var(--secondary)!important;--background-secondary-alt: var(--secondary)!important;--background-floating: var(--secondary)!important;--tertiary: #1E2228;--input-background: var(--tertiary)!important;--interactive-muted: var(--tertiary)313a!important;--accent-sea-green: #56B6C2!important;--accent-blue: #61AFEF !important;--background-brighter: #363b46!important;--accent-yellowish: #E5C07B !important;--accent-red: #E06C75 !important;--status-positive-background: var(--accent-sea-green) !important;--brand-experiment: var(--accent-blue) !important;--brand-experiment-560: #3477ad !important;--brand-experiment-600: #0d497a !important;--brand-experiment-360: var(--accent-yellowish)!important;--background-mentioned: #e5c07b2e !important;--button-positive-background: var(--accent-sea-green) !important;--interactive-muted: #4B4C4F !important}.theme-dark{--background-primary: var(--primary)!important;--background-secondary: var(--secondary)!important;--background-secondary-alt: var(--secondary)!important;--background-tertiary: var(--tertiary)!important;--text-brand: var(--accent-yellowish) !important;--status-danger: var(--accent-red)!important;--button-danger-background: var(--accent-red) !important;--button-positive-background: var(--accent-sea-green) !important;--button-positive-background-hover: #4fa5b0 !important;--button-positive-background-active: #3e8892 !important}.root-g14mjS{--modal-background: var(--primary)!important}.circleIcon-3489FI{color:var(--accent-sea-green) !important}.circleIconButton-1VxDrg{background-color:var(--background-brighter)}.circleIconButton-1VxDrg.selected-2r1Hvo{background-color:var(--accent-sea-green) !important}.circleIconButton-1VxDrg.selected-2r1Hvo .circleIcon-3489FI{color:var(--interactive-active) !important}.childWrapper-1j_1ub{background-color:var(--background-brighter) !important}.blobContainer-ikKyFs.selected-3c78Ai .childWrapper-1j_1ub{background-color:var(--accent-blue) !important}.userProfileInnerThemedNonPremium-1gT-zY{background:var(--background-primary) !important}.bd-switch input:checked+.bd-switch-body{--switch-color: var(--accent-sea-green) !important}.container-2nx-BQ.checked-25WXMf{background-color:var(--accent-sea-green) !important}.bd-button.bd-button-title{background-color:var(--accent-blue) !important}.bd-button.bd-view-button.selected{background-color:var(--accent-blue) !important}.bd-button.bd-addon-button{background-color:var(--accent-blue) !important}.bd-button.bd-addon-button.bd-button-danger{background-color:var(--accent-red) !important}.roundButton-2_R5PN.activeButton-LRWFC_{background-color:var(--accent-blue) !important}.container-3wLKDe{background-color:var(--background-primary) !important}.mainCard-3KBsBI{background-color:var(--background-secondary) !important}.scrollableContainer-15eg7h{border-radius:25px !important}.bar-2eAyLE.unreadBar-elBRZx.unread-2wipsx{backdrop-filter:blur(5px) !important}.form-3gdLxP{background:none !important;background-color:none !important}.channelTextArea-1FufC0{background:none !important;background-color:none !important}.container-ZMc96U.themed-Hp1KC_{background-color:var(--primary) !important}.addFriend-emTWY1{background-color:var(--accent-sea-green) !important}.addFriend-emTWY1.selected-g-kMVV{color:var(--accent-sea-green) !important;background-color:var(--primary) !important}.popout-3gby1q{background-color:var(--primary) !important}.searchBar-jGtisZ{background-color:var(--secondary) !important}.panels-3wFtMD{background-color:var(--tertiary) !important}.form-3gdLxP{margin-bottom:-10px !important}.wrapper-3kah-n.selected-1Drb7Z .childWrapper-1j_1ub{background-color:var(--accent-blue) !important}.channelTextArea-1FufC0.channelTextArea-1VQBuV{background:rgba(0,0,0,0) !important}/*# sourceMappingURL=main.css.map */
